<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="input_num">请输入手机号码</string>
    <string name="num">+86</string>
    <string name="input_psd">请输入密码</string>
    <string name="login">登录</string>
    <string name="user_register">新用户注册</string>
    <string name="register_login">验证码登录</string>
    <string name="error_num_psd">手机号或密码不能为空</string>
    <string name="error_num">手机号或密码错误，登录失败</string>
    <string name="error_login">登录失败，请检查网络或者IP地址！</string>
    <!-- 注册界面 -->

    <string name="look_psd">显示密码</string>
    <string name="top_register">用户注册</string>
    <string name="inputnum">填写11位手机号</string>
    <string name="mesg_register">短信验证码</string>
    <string name="get_msg">获取验证码</string>
    <string name="inputpsd">请输入6—12位密码</string>
    <string name="nextinputpsd">再次输入密码</string>
    <string name="register">注册</string>
    <string name="input_surenum">请输入正确的手机号</string>
    <string name="password_type_error">您输入的密码格式不正确！</string>
    <string name="two_password_error">密码输入不一致</string>
    <string name="num_empty">手机号不能为空！</string>
    <string name="erroe_code_get">获取验证码失败！</string>
    <string name="num_hasregister">手机号已被注册</string>
    <string name="error_code">验证码错误</string>
    <string name="error_two_psd">密码输入不一致</string>
    <string name="error_register">注册失败</string>


    <!-- 输入号码界面 -->
    <string name="top_num">输入手机号</string>
    <string name="country">国家和地区</string>
    <string name="w_country">中国</string>
    <string name="phone_num">手机号码</string>
    <string name="next">下一步</string>

    <!-- 短信验证 -->
    <string name="top_verification">填写验证码</string>
    <string name="verification_num">验证码已发送到手机：</string>
    <string name="no_code">收不到验证码？</string>
    <string name="agin_get_code">重发短信</string>
    <string name="get_code">获取验证码</string>
    <string name="input_nice_code">验证码错误，登陆失败</string>
    <string name="user_no_register">手机号未注册</string>

    <!-- 重置密码界面 -->
    <string name="top_new_psd">重置密码</string>
    <string name="new_psd_top_1">设置密码后，你可以手机号和密码登录电脑版和手机版：</string>
    <string name="new_psd_top_2">手机号码</string>
    <string name="start_action">开始体验</string>
    <string name="jump">跳过</string>
    <string name="new_psd_fail">重置密码失败</string>
    <string name="app_name">三线检查</string>

    <!-- 首页 -->
    <string name="radio_group">组织</string>
    <string name="radio_video">视频</string>
    <string name="radio_playback">回放</string>
    <string name="radio_me">我的</string>

    <!-- 视频 -->
    <string name="online_num">在线人数：</string>
    <string name="voiceing">对讲中...</string>
    <!-- 回放 -->
    <string name="upload_main">所属班组</string>
    <string name="start_time">开始日期</string>
    <string name="end_time">结束日期</string>

    <!-- 刷新 -->
    <string name="pull_to_load">上拉加载</string>
    <string name="loading">加载中</string>
    <string name="release_to_load">加载完成</string>

      <!-- 我的 -->
    <string name="problem">常见问题</string>
    <string name="give_view">意见反馈</string>
    <string name="change_psd">修改密码</string>
    <string name="sys_setting">系统设置</string>
    <string name="about">关于我们</string>
    <string name="exit">注销</string>
    <string name="exit_error">登出失败！</string>
    <string name="error_image">头像上传失败</string>
    <string name="error_getimage">头像获取失败</string>
    <string name="video_setting">画面质量</string>
    
    
    
    <!-- 语音 -->
    <string name="voice_accept">接受</string>
     <string name="voice_refuse">拒绝</string>
     <string name="voice_mute">静音</string>
     <string name="voice_invitation_man">邀请成员</string>
     <string name="voice_change_size">收起</string>
     
     
     <string name="input_text">请输入用户名</string>
     
     <string name="video_list">视频列表</string>
     
     <string name="vedio_recorde">拍摄时间：</string>
</resources>