<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    android:orientation="vertical" >

    <include layout="@layout/top_layout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/new_psd_top_1"
        android:textColor="@color/text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_psd_top_2"
            android:textColor="@color/top_text_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num"
            android:textColor="@color/top_text_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/new_psd_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/linearlayout_bg"
        android:padding="5dp" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/register_password" />

        <EditText
            android:id="@+id/new_psd_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/inputpsd"
            android:inputType="textPassword"
            android:maxLength="12"
            android:singleLine="true"
            android:textColorHint="@color/text_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/linearlayout_bg"
        android:padding="5dp" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/register_password" />

        <EditText
            android:id="@+id/new_psd_again_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/nextinputpsd"
            android:inputType="textPassword"
            android:maxLength="12"
            android:singleLine="true"
            android:textColorHint="@color/text_color"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/new_psd_error_againpsd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:textColor="@color/zhenggai"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/look_psd"
            android:textColor="@android:color/black" />

        <ToggleButton
            android:id="@+id/new_psd_look_psd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:button="@drawable/toggle_btn"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <Button
        android:id="@+id/new_psd_finish"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_register_pressed"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/start_action"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>